wp-content/themes/nousdesign/assets/css/page-home.css
body .home-container{
  position: absolute;
  width: 100%;
  top: 50%;
  margin-top: -275px;
}


@media (max-height: 830px){
  body .home-container{
    margin-top: -190px;
  }
}

@media (max-height: 650px){
  body .home-container{
    position: relative;
    margin: 0 auto !important;
    top: 0;
    left: 0;
  }
}

.home-carousel,
.home-carousel-text{
  width: 100%;
  overflow: hidden;
}

.home-carousel ul{
  width: 100000px;
  position: relative;
}

.home-carousel ul li{
  float: left;
  margin-right: 20px;
}

.home-carousel ul li img{
  max-width: none;
  height: 455px;
}

.home-carousel-text{
  position: absolute;
  top: 0;
  height: 455px;
}

.home-carousel-text ul li{
  position: absolute;
  font-family: 'ChaletNewYork', helvetica, arial, sans-serif;
  font-size: 25em;
  line-height: 1;
  text-transform: uppercase;
  color: #fff;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
  filter:alpha(opacity=40);
  -moz-opacity: 0.4;
  opacity: 0.4;
}

.home-carousel-text ul li.small{
  font-size: 6em;
}

.home-carousel-text ul li.design{
  font-family: 'ChaletParis', helvetica, arial, sans-serif;
  color: #999;
}

.home-carousel-text ul li.nousdesign_1{
  top: 0px;
  margin-left: 400px;
}

.home-carousel-text ul li.nousdesign_2{
  bottom: -40px;
  margin-left: 1000px;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
  filter:alpha(opacity=50);
  -moz-opacity: 0.5;
  opacity: 0.5;
}

.home-carousel-text ul li.nousdesign_3{
  top: 80px;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
  filter:alpha(opacity=80);
  -moz-opacity: 0.8;
  opacity: 0.8;
}

.home-carousel-text ul li.nousdesign_4{
  top: 130px;
  margin-left: 1000px;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
  filter:alpha(opacity=70);
  -moz-opacity: 0.7;
  opacity: 0.7;
}

